--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,7 @@
 .top {
     margin-top: 30px;
     margin-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .top-left {
@@ -48,6 +49,7 @@
 
 .projects {
     width: 80vw;
+    font-family: 'Kanit', sans-serif;
 
 }
 
